# AdventOfCode

./: .gitignore  LICENSE  README.md  aoc.py
2020/Day01/: Day01.cpp
2021/: .gitignore  README
2021/Day1/: part1.cpp  part2.cpp
2021/Day2/: main.cpp  main2.cpp
2021/Day3/: main.cpp  main2.cpp
2022/: .gitignore  CMakeLists.txt  README.md
2022/Day01/: Part1.cpp  Part2.cpp
2022/Day02/: Part1.cpp  Part2.cpp
2022/Day03/: Part1.cpp  Part2.cpp
2022/Day04/: Part1.cpp  Part2.cpp
2022/Day05/: Part1.cpp  Part2.cpp
2022/Day06/: Part1.cpp  Part2.cpp
2022/Day07/: Part1.cpp  Part2.cpp
2022/Day08/: Part1.cpp
2023/: README.md
2023/src/: day_01.clj  day_02.clj  day_03.clj  day_04.clj  day_05.clj  day_06.clj  day_07.clj  day_08.clj
2024/: .gitignore  CMakeLists.txt  README.md
2024/Day01/: Part1.cpp  Part2.cpp
2024/Day02/: Part1.cpp  Part2.cpp
2024/Day03/: Part1.cpp  Part2.cpp
2024/Day04/: Part1.cpp  Part2.cpp
2024/Day05/: Part1.cpp  Part2.cpp
2024/Day06/: Part1.cpp
2024/Day07/: Part1.cpp  Part2.cpp
2024/Source/: AdventOfCodeStd.cpp  AdventOfCodeStd.hpp
factories/: __init__.py  clj_factory.py  cpp_factory.py
templates/clj/: README.md.j2  deps.edn.j2
templates/clj/src/: aoc.clj.j2  day_xx.clj.j2
templates/cpp/: CMakeLists.txt.j2  main.cpp.j2
